# nova-todos

./: .clang_complete  BackEnd.cpp  BackEnd.h  CMakeLists.txt  TodoObject.cpp  TodoObject.h  main.cpp  main.qml  nova-org-mode.pro  readme.org  runtodos  todos.cpp  todos.h  todos.org
